# sets

./: .gitignore  README.md  environment.yml
configs/sixdofaircraft/: fixed_wing.yaml  glider_baseline_test.yaml  policy_convergence.yaml  rollout.yaml  value_convergence.yaml
scripts/: old_glider_baseline_exp2.py  old_glider_data_analysis.py  old_policy_convergence.py  old_test_simple2.py  old_test_value_convergence.py  policy_convergence.py  rollout.py  value_convergence.py
src/: CMakeLists.txt  bindings.cpp  plotter.py
src/learning/: feedforward.hpp  feedforward.py
src/mdps/: dots.hpp  game_sixdofaircraft.hpp  mdp.hpp  sixdofaircraft.hpp
src/solvers/: dots_predictive_sampling.hpp  double_progressive_widening_mcts.hpp  solver.hpp  uct.hpp  uct2.hpp  uniform_discretization_mcts.hpp  uniform_discretization_predictive_sampling.hpp
src/util/: dare.hpp  fd.hpp  util.hpp  util.py
